# Tetrium

./: .clang-format  .gitignore  .gitmodules  :w  CMakeLists.txt  compile_shaders.py  design.md  maybe_useful.md  readme.md  vcpkg.json
assets/apps/AppPainter/shaders/: paint_to_view_space.frag  paint_to_view_space.frag.spv
assets/apps/AppTetraHueSphere/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
legacy/ecs/component/: Component.h  TransformComponent.h
legacy/ecs/entity/: Entity.h
legacy/ecs/system/: SimpleRenderSystem.cpp  SimpleRenderSystem.h  System.h  TetraImageDisplaySystem.cpp  TetraImageDisplaySystem.h
shaders/: rygb_to_rocv.frag  rygb_to_rocv.frag.spv  rygb_to_rocv.frag.spv.asm  rygb_to_rocv.vert  rygb_to_rocv.vert.spv  tetra_image.frag  tetra_image.frag.spv  tetra_image.vert
shaders/phong/: phong.frag  phong.frag.spv  phong.vert  phong.vert.spv  phong_cmy.frag  phong_cmy.frag.spv  phong_rgb.frag  phong_tetra.frag  phong_tetra.frag.spv  phong_tetra.vert  phong_tetra.vert.spv
src/: MetalInterface.h  MetalInterface.mm  MoltenVKConfig.h  PCH.h  Quarkolor.cpp  Quarkolor.h  Tetrium.cpp  Tetrium.h  Tetrium_Bootstrap.cpp  Tetrium_Config.cpp  Tetrium_EvenOdd.cpp  Tetrium_GUI.cpp  Tetrium_ImGui.cpp  Tetrium_RYGB.cpp  Tetrium_Tick.cpp  Tetrium_Windowing.cpp  VulkanEngine.cpp  VulkanEngine.h  constants.h  main.cpp
src/apps/: App.h  AppImageViewer.cpp  AppImageViewer.h  AppPainter.cpp  AppPainter.h  AppScreeningTest.cpp  AppScreeningTest.h  AppTetraHueSphere.cpp  AppTetraHueSphere.h
src/apps/app_components/: TextureFrameBuffer.cpp  TextureFrameBuffer.h  Transform.h
src/apps/components/: TextureFrameBuffer.h
src/apps/painter/: PainterColorPicker.cpp  PainterImGui.cpp  PainterPaint.cpp  PainterSerialize.cpp
src/components/: Camera.cpp  Camera.h  DeltaTimer.cpp  DeltaTimer.h  ImGuiManager.cpp  ImGuiManager.h  InputManager.cpp  InputManager.h  Logging.h  Profiler.h  SoundManager.cpp  SoundManager.h  TaskQueue.cpp  TaskQueue.h  TextureManager.cpp  TextureManager.h
src/components/color_generator/: ColorGenerator.h  ColorGeneratorDemo.h
src/components/imgui_widgets/: ImGuiWidget.h  ImGuiWidgetBlobHunter.cpp  ImGuiWidgetBlobHunter.h  ImGuiWidgetColorTile.cpp  ImGuiWidgetColorTile.h  ImGuiWidgetDeviceInfo.cpp  ImGuiWidgetEvenOdd.cpp  ImGuiWidgetEvenOddCalibration.cpp  ImGuiWidgetEvenOddCalibration.h  ImGuiWidgetFBViewer.h  ImGuiWidgetGraphicsPipeline.cpp  ImGuiWidgetPerfPlot.cpp  ImGuiWidgetPsychophysicsScreeningTest.cpp  ImGuiWidgetPsychophysicsScreeningTest.h  ImGuiWidgetTemp.cpp  ImGuiWidgetTemp.h  ImGuiWidgetTetraViewer.cpp  ImGuiWidgetTetraViewer.h  ImGuiWidgetTetraViewerDemo.cpp  ImGuiWidgetTetraViewerDemo.h  ImGuiWidgetUBOViewer.cpp
src/ecs/component/: Component.h  TransformComponent.h
src/ecs/entity/: Entity.h
src/ecs/system/: SimpleRenderSystem.cpp  SimpleRenderSystem.h  System.h  TetraImageDisplaySystem.cpp  TetraImageDisplaySystem.h
src/lib/: ImGuiUtils.cpp  ImGuiUtils.h  Utils.cpp  Utils.h  VQBuffer.h  VQDevice.cpp  VQDevice.h  VQDeviceImage.cpp  VQDeviceImage.h  VQUtils.cpp  VulkanUtils.cpp  VulkanUtils.h
src/lib/dxgi/: DXGISwapchain.cpp  DXGISwapchain.h
src/structs/: ColorSpace.h  ImGuiTexture.h  SharedEngineStructs.h  Vertex.cpp  Vertex.h
